2006-05-19  Kouhei Sutou  <kou@cozmixng.org>

	* sample/pdf2text.rb: added a sample which extract text from PDF.

	* src/rbpoppler-document.c (index_iter_initialize): added NULL
	check.
	(Poppler::Layout): fixed type.

2006-05-18  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: make src/rbpopplerversion.h.

	* src/rbpoppler.h: include src/rbpopplerversion.h.

	* src/rbpoppler.c (Poppler::BUILD_VERSION): added.

	* src/lib/poppler.rb (Poppler::VERSION): added.

2006-05-14  Kouhei Sutou  <kou@cozmixng.org>

	* .: imported.